--- a/templates/configure_bdocker.cfg.j2
+++ b/templates/configure_bdocker.cfg.j2
@@ -22,7 +22,7 @@ only_docker_accounting = {{ WND_only_docker_accounting }}
 
 [credentials]
 controller = {{ WND_cred_controller }}
-token_store = {{ WND_cred_token_store }}
+token_store = {{ cred_token_store }}
 token_client_file = {{ WND_cred_token_client_file }}
 
 [dockerAPI]
@@ -49,7 +49,7 @@ bdocker_accounting = {{ AND_bdocker_accounting }}
 
 [credentials]
 controller = {{ AND_cred_controller }}
-token_store = {{ AND_cred_token_store }}
+token_store = {{ cred_token_store }}
 
 {% endif %}
 
@@ -69,7 +69,7 @@ controller = WNController
 
 [credentials]
 controller = {{ WND_cred_controller }}
-token_store = {{ WND_cred_token_store }}
+token_store = {{ cred_token_store }}
 token_client_file = {{ WND_cred_token_client_file }}
 
 [dockerAPI]
