putting batch controller variable back

--- a/templates/configure_bdocker.cfg.j2
+++ b/templates/configure_bdocker.cfg.j2
@@ -65,7 +65,7 @@ port = {{ server_wn_port }}
 logging = {{ server_wn_logging }}
 
 [batch]
-controller = WNController
+controller = {{ WND_batchCtrl }}
 
 [credentials]
 controller = {{ WND_cred_controller }}
