changing bdocker accounting default file location

--- a/templates/configure_bdocker.cfg.j2
+++ b/templates/configure_bdocker.cfg.j2
@@ -45,7 +45,7 @@ time_out = {{ server_timeout }}
 [batch]
 # controller can be: SGEAccountingController (add more modules)
 controller = {{ AND_controller }}
-bdocker_accounting = {{ AND_bdocker_accounting }}
+bdocker_accounting = {{ bdocker_accounting }}
 
 [credentials]
 controller = {{ AND_cred_controller }}
